--- a/TorrentUploader/TorrentUploader-Info.plist
+++ b/TorrentUploader/TorrentUploader-Info.plist
@@ -26,9 +26,11 @@
 	<string>${MACOSX_DEPLOYMENT_TARGET}</string>
 	<key>NSHumanReadableCopyright</key>
 	<string>Copyright © 2013 Demon Jelly. All rights reserved.</string>
-	<key>NSMainNibFile</key>
-	<string>MainMenu</string>
 	<key>NSPrincipalClass</key>
 	<string>NSApplication</string>
+	<key>LSUIElement</key>
+	<true/>
+	<key>LSBackgroundOnly</key>
+	<false/>
 </dict>
 </plist>
